Fix Vercel install with npm ci

--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,5 @@
 {
-  "buildCommand": "npm run build",
+  "installCommand": "npm ci",
+  "buildCommand": "npx prisma generate && npx remix vite:build",
   "framework": null
 }
