--- a/package.json
+++ b/package.json
@@ -16,15 +16,15 @@
     "@remix-run/node": "^2.0.0",
     "@remix-run/react": "^2.0.0",
     "@remix-run/serve": "^2.0.0",
+    "@remix-run/dev": "^2.0.0",
     "isbot": "^4.1.0",
     "prisma": "^5.22.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "vite": "^5.1.0"
   },
   "devDependencies": {
-    "@remix-run/dev": "^2.0.0",
     "typescript": "^5.2.2",
-    "vite": "^5.1.0",
     "@shopify/cli": "^3.0.0"
   },
   "engines": {
