--- a/vercel.json
+++ b/vercel.json
@@ -2,5 +2,8 @@
   "installCommand": "npm ci",
   "buildCommand": "npm run build",
   "outputDirectory": "build/client",
-  "framework": null
+  "framework": null,
+  "rewrites": [
+    { "source": "/(.*)", "destination": "/build/server/index.js" }
+  ]
 }
